<resources>
    <string name="app_name">Project1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="header_home">All Notes</string>
    <string name="header_post_txt">Header</string>
    <string name="text_post">Information</string>
    <string name="btn_submit_edit">Submit</string>
    <string name="item_id">Id</string>
    <string name="item_header">Header</string>
    <string name="item_time">Time</string>
    <string name="post_id">Id</string>
</resources>