<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PostFragment"
    android:background="#DDDDDD">

    <EditText
        android:id="@+id/post_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/header_post_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        android:minWidth="150dp"/>

    <EditText
        android:id="@+id/post_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/post_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        android:minWidth="60dp"/>

    <EditText
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_header"
        android:layout_marginTop="40dp"
        android:hint="@string/text_post"
        android:inputType="text"
        android:minWidth="400dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/edit_button"
        android:text="@string/btn_submit_edit"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#fff"
        android:layout_marginBottom="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>